kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  labels:
    app: kavita
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kavita
  template:
    metadata:
      labels:
        app: kavita
    spec:
      serviceAccountName: kavita
      #securityContext:
      #  runAsNonRoot: true
      #  runAsUser: 1000
      #  runAsGroup: 1000
      containers:
        - name: kavita
          image: jvmilazz0/kavita:latest
          imagePullPolicy: Always
          ports:
            - name: http
              protocol: TCP
              containerPort: 5000
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            failureThreshold: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            failureThreshold: 5
            periodSeconds: 10
          volumeMounts:
            - mountPath: /kavita/config
              name: config
            - mountPath: /kavita/library
              name: library
        - name: kavita-email
          image: jvmilazz0/kavitaemail:latest
          imagePullPolicy: Always
          ports:
            - name: http
              protocol: TCP
              containerPort: 5003
          securityContext:
            runAsNonRoot: false
            runAsUser: 0
            runAsGroup: 0
          livenessProbe:
            httpGet:
              path: /api/test
              port: http
            failureThreshold: 3
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /api/test
              port: http
            initialDelaySeconds: 30
            failureThreshold: 5
            periodSeconds: 5
          volumeMounts:
            - mountPath: /app/config/appsettings.json
              subPath: appsettings.json
              name: config-email
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: kavita
        - name: appsettings
          configMap:
            name: kavita
        - name: config-email
          configMap:
            name: kavita-email
