kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
  labels:
    name: kavita
spec:
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: kavita

---

apiVersion: v1
kind: Service
metadata:
  name: kavita-email
  labels:
    name: kavita-email
spec:
  ports:
    - port: 5003
      protocol: TCP
  selector:
    app: kavita
